# postsync

./: .gitignore  README.md  TECHNICAL_FLOW.md  package.json
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tech.md
public/: manifest.json  sw.js
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/analytics/: page.tsx
src/app/api/analytics/analyze/: route.ts
src/app/api/auth/: route.ts
src/app/api/extract/: route.ts
src/app/api/generate/: route.ts
src/app/api/images/: route.ts
src/app/api/posts/: route.ts
src/app/api/social-accounts/: route.ts
src/app/compose/: page.tsx
src/app/connections/: page.tsx
src/app/dashboard/: page.tsx
src/app/login/: page.tsx
src/app/pricing/: page.tsx
src/app/schedule/: page.tsx
src/app/settings/: page.tsx
src/components/previews/: FacebookPreview.tsx  InstagramPreview.tsx  LinkedInPreview.tsx  ThreadsPreview.tsx  TwitterPreview.tsx
src/components/ui/: AIGenerate.tsx  CharLimitWarning.tsx  ImageUpload.tsx  PlatformSelector.tsx  PostCard.tsx  PostComposer.tsx  SchedulePicker.tsx  ShareButtons.tsx  Skeleton.tsx  ThemeToggle.tsx  Toast.tsx
src/db/: index.ts  migrate.ts  schema.ts
src/db/migrations/: 0000_whole_wrecker.sql  0001_dry_tarot.sql  0002_analytics_events.sql
src/db/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
src/lib/: ai.ts  analytics.ts  extractor.ts  facebook.ts  images.ts  instagram.ts  linkedin.ts  twitter.ts  types.ts
(+16 files in other folders)
